--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -251,6 +251,34 @@ h4 {
     line-height: 35px; 
 }
 
+/* GALLERY PAGE */
+
+/* Content section */
+
+.gallery-page-container {
+    max-width: 1100px;
+    margin: 0 auto;
+    margin-bottom: 125px;
+}
+
+.gallery-container {
+    margin-top: 77px;
+}
+
+.gallery-image-container {
+    max-width: 343px;
+    margin: 0 auto;
+    margin-bottom: 91px;
+}
+
+.gallery-content {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    width: 864px;
+    margin: 0 auto; 
+    line-height: 35px;
+}
 
 
 /* ABOUT PAGE */
@@ -327,7 +355,41 @@ h4 {
 .family-row3-container {
     display: flex;
     justify-content: space-between;
-}    
+}  
+
+.tree-ant {
+    padding-right: 5px;
+}
+
+.tree-mark {
+    padding-right: 5px;
+    padding-left: 5px;
+
+}
+
+.tree-jamie {
+    padding-right: 5px;
+    padding-left: 5px;
+}
+
+.tree-emily {
+    padding-right: 5px;
+    padding-left: 5px;
+}
+
+.tree-dan {
+    padding-right: 5px;
+    padding-left: 5px;
+}
+
+.tree-ro {
+    padding-right: 5px;
+    padding-left: 5px;
+}
+
+.tree-hal {
+    padding-left: 5px;
+}
 
 .row3-photo {
     width: 150px;
@@ -338,7 +400,6 @@ h4 {
     font-size: 14px;
     font-weight: 400;
 }
-
 
 .ant-caption {
     width: 150px;
@@ -380,7 +441,6 @@ h4 {
 .ant-kids-container {
     margin-right: 97px;
 }
-
 
 .row4-caption {
     font-family: 'Montserrat', sans-serif;
