add link destinations

--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -13,22 +13,22 @@ site_title: Bernard Francis Dillon
     </head>   
     <body>
         <div class="top-banner">
-            <h2 class="banner">{{ site_title }}</h2>
+            <h2 class="banner"><a href="http://localhost:8080/">{{ site_title }}</a></h2>
         </div>
 
         <div class="nav">
             <ul class="nav-buttons">
                 <li class="about-button">
-                    <a href="#" class="about-button-text">About</a>
+                    <a href="http://localhost:8080/about/" class="about-button-text">About</a>
                 </li>    
                 <li class="awards-button">
-                    <a href="#" class="awards-button-text">Awards & Exhibitions</a>
+                    <a href="http://localhost:8080/awards/" class="awards-button-text">Awards & Exhibitions</a>
                 </li>    
                 <li class="gallery-button">
-                    <a href="#" class="gallery-button-text">The Gallery</a>
+                    <a href="http://localhost:8080/gallery/" class="gallery-button-text">The Gallery</a>
                 </li>    
                 <li class="family-button"> 
-                    <a href="#" class="family-button-text">Family Facts</a>
+                    <a href="http://localhost:8080/family/" class="family-button-text">Family Facts</a>
                 </li>    
             </ul>
         </div>    
