--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -50,9 +50,9 @@ a {
     text-decoration: none;
 }
 
-a:visited {
+/* a:visited {
     color: inherit;
-}
+} */
 
 
 /* TOP BANNER */
@@ -66,7 +66,7 @@ a:visited {
     background-color: #0C1821;  
 }
 
-.banner {
+.banner a {
     font-family: 'Cormorant', serif;
     font-size: 59px;
     width: 700px;
@@ -75,7 +75,7 @@ a:visited {
 }
 
 .banner:visited {
-    color: white;
+    color: inherit;
 }
 
 .nav {
