--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -350,14 +350,22 @@ a {
 
 .carousel {
     overflow: hidden;
-    max-width: 600px;
+    /* max-width: 600px; */
+    width: 80%;
+    height: 660px;
     position: relative;
     margin: 0 auto;
+}
+
+.carousel__track-container {
+    height: 100%;
+    width: 100%;
 }
 
 .carousel__item {
     margin: 0 auto;
     width: 430px;
+    height: 580px;
 }
 
 .carousel .carousel__item,
@@ -369,6 +377,8 @@ a {
     max-width: 500px;
     width: 100%;
     height: auto;
+    object-fit: contain;
+    height: 580px;
 }
 
 .carousel .carousel__item--visible {
@@ -381,7 +391,7 @@ a {
     width: 100%;
     justify-content: space-between;
     position: absolute;
-    top: 50%;
+    top: 45%;
     transform: translateY(-50%);
 }
 
@@ -412,12 +422,33 @@ a {
     }
 }
 
+/* .art-2__container {
+    height: 600px;
+    
+} */
+
 .art-caption {
     font-family: 'Montserrat', sans-serif;
     font-size: 13px;
     font-weight: 400;
     line-height: 20px;
     /* width: 420px; */
+}
+
+.caption-5 {
+    margin-top: 0px;
+}
+
+.caption-6 {
+    margin-top: 0px;
+}
+
+.life-drawing {
+    height: 580px;
+}
+
+.bishop-painting {
+    height: 580;
 }
 
 
