--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -138,7 +138,8 @@ a {
 }
 
 .family-button {
-    padding: 25px 20px 27px 45px;
+    padding: 25px 45px 27px 45px;
+    margin-right: -20px;
 }
 
 .family-button-text {
