--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -677,3 +677,10 @@ a {
     font-weight: 400;
     width: 95px;
 }
+
+.row4-caption-parent {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    color: #30D5C8;
+}
