--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -299,6 +299,8 @@ a {
     max-width: 1100px;
     margin: 0 auto;
     margin-bottom: 125px;
+    padding-right: 10px;
+    padding-left: 10px;
 }
 
 .awards-container {
@@ -462,6 +464,9 @@ a {
 .about-section {
     max-width: 864px;
     margin: 0 auto;
+    padding-left: 10px;
+    padding-right: 10px;
+
 }
 
 .about-page-title {
@@ -485,6 +490,7 @@ a {
     height: 1640px;
     max-width: 1350px;
     padding-left: 20px;
+    padding-right: 20px;
     margin: 0 auto;
 }
 
