--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -15,7 +15,8 @@ h1 {
     font-size: 94px;
     color: black;
     text-align: center;
-    width: 900px;
+    /* max-width: 900px; */
+    /* width: 100%; */
     margin: 0 auto;
     margin-top: 75px;
 }
@@ -163,10 +164,15 @@ a {
     margin-top: 0px;
     margin-bottom: 0px;
     padding-top: 25px;
+    padding: 25px 10px 0px 10px;
 }
 
 
 /* HOME PAGE */
+
+.top-header {
+    width: 100%;
+}
 
 .home-about-container {
     max-width: 1087px;
@@ -175,13 +181,19 @@ a {
     justify-content: space-between;
     margin: 0 auto;
     padding-top: 83px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .home-about-content {
     font-family: 'Montserrat', sans-serif;
-    width: 380px;
+    width: 400px;
     margin: 0 auto;
     padding-top: 70px;  
+}
+
+.home-image-container {
+    padding-right: 15px;
 }
 
 .about-title {
@@ -266,6 +278,7 @@ a {
     max-width: 500px;
     width: 100%;
     height: auto;
+    object-fit: contain;
 }
 
 .home__carousel .home__carousel__item--visible {
@@ -318,7 +331,9 @@ a {
     font-family: 'Montserrat', sans-serif;
     font-size: 18px;
     font-weight: 400;
-    width: 864px;
+    max-width: 884px;
+    padding-left: 20px;
+    padding-right: 20px;
     margin: 0 auto; 
     line-height: 35px; 
 }
@@ -347,9 +362,11 @@ a {
     font-family: 'Montserrat', sans-serif;
     font-size: 18px;
     font-weight: 400;
-    width: 864px;
+    max-width: 894px;
     margin: 0 auto; 
     margin-bottom: 50px;
+    padding-left: 30px;
+    padding-right: 30px;
     line-height: 35px;
 }
 
@@ -358,7 +375,7 @@ a {
 .carousel {
     overflow: hidden;
     /* max-width: 600px; */
-    width: 80%;
+    max-width: 80%;
     height: 730px;
     position: relative;
     margin: 0 auto;
@@ -366,12 +383,12 @@ a {
 
 .carousel__track-container {
     height: 100%;
-    width: 100%;
+    max-width: 100%;
 }
 
 .carousel__item {
     margin: 0 auto;
-    width: 430px;
+    max-width: 430px;
     height: 580px;
 }
 
@@ -398,7 +415,7 @@ a {
     width: 100%;
     justify-content: space-between;
     position: absolute;
-    top: 45%;
+    top: 40%;
     transform: translateY(-50%);
 }
 
@@ -450,6 +467,10 @@ a {
     margin-top: 0px;
 }
 
+/* .caption-25 {
+    margin-top: 0px;
+} */
+
 .life-drawing {
     height: 580px;
 }
@@ -470,7 +491,8 @@ a {
 }
 
 .about-page-title {
-    width: 864px;
+    /* width: 864px; */
+    width: 100%;
 }
 
 .about-content {
@@ -520,7 +542,7 @@ a {
 .family-row2-container {
     display: flex;
     justify-content: space-between;
-    width: 805px;
+    max-width: 805px;
     margin-right: 10px;  
 }
 
@@ -565,8 +587,24 @@ a {
 
 .family-row3-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-between;   
 }  
+
+.steve-kids {
+    display: flex;
+    justify-content: space-between; 
+}
+
+.julie-kids {
+    display: flex;
+    justify-content: space-between;
+}
+
+.glyn-kids {
+    display: flex;
+    justify-content: space-between;
+}
+
 
 .tree-ant {
     padding: 10px 10px;
@@ -665,7 +703,7 @@ a {
 .family-row4-section {
     display: flex;
     justify-content:flex-start; 
-    width: 400px;
+    max-width: 400px;
 }
 
 .ant-kids-container {
@@ -689,4 +727,886 @@ a {
     font-size: 16px;
     font-weight: 400;
     color: #30D5C8;
+}
+
+
+
+
+
+/* MOBILE DESIGN */
+
+@media only screen and (max-width:450px) {
+
+    /* NAV BAR */
+
+    .top-banner {
+        height: 70px;
+    }
+
+    .nav {
+        height: 50px;
+    }
+
+    .top-banner {
+        padding-left: 20px;
+        padding-top: 20px;
+    }
+
+    .banner a {
+        font-size: 24px;
+        font-family: 'Cormorant', serif;
+    }
+
+    .nav-buttons {
+        height: 50px;
+    }
+
+    .nav-buttons li {
+        font-size: 12px;
+        padding: 5px 10px 5px 10px;
+        height: 50px;
+    }
+
+    /* FOOTER */
+
+    .footer {
+        font-size: 11px;
+    }
+
+    /* HOME PAGE */
+
+    h1 {
+        font-size: 40px;
+        width: inherit;
+        margin-top: 40px;
+    }
+
+    h3 {
+        font-size: 16px;
+    }
+
+    .home-about-section {
+        height: 850px;
+    }
+
+    .home-about-container {
+        width: 100px;
+        display: initial;
+    }
+
+    .home-about-content {
+        width: 100%;
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-top: 40px;
+    }
+
+    .home-image-container {
+        width: 270px;
+        margin: 0 auto;
+        padding-right: 0px;
+    }
+
+    .home-image {
+        width: 270px;
+    }
+
+    .about-title {
+        font-size: 40px;
+        text-align: center;
+    }
+
+    .home-words {
+        font-size: 14px;
+    }
+
+    .read-more-button-container {
+        text-align: center;
+    }
+
+    .home-works-section {
+        height: 670px;
+    }
+
+    .recent-works-title {
+        font-size: 40px;
+    }
+
+    .home__carousel {
+        max-width: 95%;
+        height: 250px;
+        /* height: inherit; */
+    }
+
+    .home__carousel .home__carousel__item {
+        width: 250px
+    }
+
+    .home__carousel .home__carousel__item img {
+        object-fit: contain;
+        width: 250px
+    }
+
+    .home__carousel .home__carousel__actions {
+        top: 40%;
+    }
+
+
+    
+
+    /* AWARDS */
+
+    .awards-section {
+        margin-bottom: 50px;
+    }
+
+    .awards-container {
+        margin-top: 45px;
+    }
+
+    .awards-image-container {
+        width: 300px;
+        margin-bottom: 50px;
+    }
+
+    .awards-image {
+        width: 300px;
+    }
+
+    .awards-content {
+        font-size: 14px;
+    }
+
+    
+
+    /* ABOUT */
+
+    .about-section {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    .about-content {
+        margin-top: 40px;
+        margin-bottom: 50px;
+        font-size: 14px;
+    }
+
+    /* GALLERY */
+
+    .gallery-container {
+        margin-top: 45px;
+    }
+
+    .gallery-image-container {
+        margin-bottom: 50px;
+        width: 315px;
+    }
+
+    .gallery-main-image {
+        width: 315px;
+    }
+
+    .gallery-content {
+        font-size: 14px;
+        margin-bottom: 30px;
+    }
+
+    .carousel {
+        height: 788px;
+    }
+
+    .carousel .carousel__item {
+        width: 210px;
+    }
+
+    .carousel .carousel__item img {
+        max-width: 260px;
+    }
+
+    .carousel .carousel__actions {
+        top: 37%;
+    }
+
+    .caption-25 {
+        margin-top: 0px;
+    }
+
+    /* FAMILY */
+
+    .family-row1-container, .bern-mu-photo, .bern-caption {
+        width: 270px;
+    }
+
+    .bern-caption {
+        font-size: 14px;
+    }
+
+    .tree-steve, .tree-julie, .tree-glyn {
+        padding: 10px;
+        max-width: 105px;
+    }
+
+    .tree-julie {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+
+    .row2-photo {
+        width: 80px;
+    }
+
+    .row2-caption {
+        width: 80px;
+        font-size: 11px;
+    }
+
+    
+    .tree-ant, .tree-mark, .tree-jamie, .tree-emily, .tree-dan, .tree-ro, .tree-hal {
+        padding: 10px;
+        max-width: 103px;
+        margin-right: 0px;
+    }
+
+    .tree-ant, .tree-mark, .tree-jamie {
+        margin-bottom: 10px;
+    }
+
+    .tree-dan {
+        margin-top: 10px;
+        margin-left: 6px;
+    }
+
+    .tree-hal {
+        margin-top: 10px;
+        margin-left: 7px;
+    }
+
+    .steve-kids {
+        display: initial; 
+    }
+    
+    .julie-kids {
+        display: initial;
+        
+    }
+    
+    .glyn-kids {
+        display: initial;
+    }
+
+    .row3-photo {
+        width: 80px;
+        margin-right: 0px;
+    }  
+    
+    .row3-caption, .ant-caption, .dan-caption {
+        width: 80px;
+        font-size: 10px;
+    }
+
+
+    .ant-kids-container {
+        margin-right: 65px;
+    }
+
+    .row4-caption-parent {
+        font-size: 13px;
+    }
+
+    .row4-caption {
+        font-size: 11px;
+        width: 79px;
+    }
+    
+}
+
+
+/* LARGE LAPTOP VIEW */
+
+@media screen and (max-width: 950px) and (min-width: 700px) {
+
+    h1 {
+        font-size: 70px;
+    }
+
+    /* FOOTER */
+
+    .footer {
+        font-size: 12px;
+    }
+
+    /* HOME */
+
+    .top-banner {
+        padding-left: 40px;
+        padding-top: 25px;
+        height: 100px;
+    }
+
+    .banner a {
+        font-size: 40px;
+    }
+
+    .nav {
+        height: 65px;
+    }
+
+    .nav-buttons {
+        height: 65px;
+    }
+
+    .nav-buttons li {
+        height: 65px;
+        font-size: 16px;
+        padding: 23px 40px 23px;
+    }
+
+    .home-about-section {
+        height: 900px;
+    }
+
+    .home-about-container {
+        padding-right: 10px;
+        padding-top: 50px;
+    }
+
+    .home-about-content {
+        padding-right: 10px;
+        padding-left: 10px;
+        padding-top: 43px;
+    }
+
+    .home-image {
+        max-width: 340px;
+    }
+
+    /* AWARDS */
+
+    .awards-section {
+        margin-bottom: 80px;
+    }
+
+    .awards-title {
+        /* font-size: 70px; */
+    }
+
+    .awards-container {
+        margin-top: 60px;
+    }
+
+    .awards-image-container {
+        margin-bottom: 60px;
+    }
+
+    /* ABOUT */
+
+    .about-section {
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+
+    .about-content {
+        margin-top: 60px;
+        margin-bottom: 95px;
+    }
+
+    /* GALLERY */
+
+    .gallery-page-container {
+        margin-bottom: 60px;
+    }
+
+    .gallery-container {
+        margin-top: 60px;
+    }
+
+    .gallery-image-container {
+        margin-bottom: 70px;
+    }
+
+    .gallery-content {
+        margin-bottom: 40px;
+    }
+
+    .carousel .carousel__actions {
+        top: 40%;
+    }
+}
+
+
+/* MEDIUM LAPTOP VIEW */
+
+@media screen and (max-width: 699px) and (min-width: 451px) {
+
+
+    h1 {
+        font-size: 46px;
+        margin-top: 60px;
+    }
+
+    /* FOOTER */
+
+    .footer {
+        font-size: 11px;
+    }
+
+    /* HOME PAGE  */
+
+    .top-banner {
+        padding-left: 40px;
+        padding-top: 25px;
+        height: 80px;
+    }
+
+    .banner a {
+        font-size: 35px;
+    } 
+
+    .home-works-section {
+        height: 770px;
+    }
+
+    .home-about-section {
+        height: 1090px;
+    }
+
+    .home-about-container {
+        padding-right: 10px;
+        padding-top: 50px;
+        display: initial;
+        
+        /* float: right; */
+        /* flex-direction: row-reverse; */
+        /* flex-direction: column-reverse; */
+    }
+
+    .home-image-container {
+        margin: 0 auto;
+        width: 310px;
+        padding-right: 0px;
+    }
+
+    .home-about-content {
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+
+    .about-title {
+        text-align: center;
+        font-size: 45px;
+    }
+
+    .home-words {
+        font-size: 17px;
+        margin-bottom: 53px;
+    }
+
+    .read-more-button-container {
+        text-align: center;
+    }
+
+    .home-image {
+        max-width: 310px;
+    }
+
+    .home__carousel {
+        height: 300px;
+    }
+
+    .home__carousel .home__carousel__item {
+        width: 330px;
+    }
+
+    .home__carousel .home__carousel__item img {
+        max-width: 330px;
+    }
+
+    .home__carousel .home__carousel__actions {
+        top: 43%;
+    }
+
+
+    /* AWARDS */
+
+    .awards-section {
+        margin-bottom: 60px;
+    }
+
+    .awards-title {
+        /* font-size: 70px; */
+        /* margin-top: 60px; */
+    }
+
+    .awards-container {
+        margin-top: 60px;
+    }
+
+    .awards-image-container {
+        margin-bottom: 50px;
+    }
+
+    /* ABOUT */
+
+    .about-section {
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+
+    .about-page-title {
+        margin-top: 60px;
+    }
+
+    .about-content {
+        margin-top: 50px;
+        margin-bottom: 75px;
+    }
+
+    /* GALLERY */
+
+    .gallery-page-container {
+        margin-bottom: 60px;
+    }
+
+    .gallery-container {
+        margin-top: 60px;
+    }
+
+    .gallery-image-container {
+        margin-bottom: 60px;
+    }
+
+    .gallery-image-container {
+        width: 345px;
+    }
+
+    .gallery-main-image {
+        width: 345px;
+    }
+
+    .gallery-content {
+        margin-bottom: 40px;
+    }
+
+    .carousel {
+        height: 788px;
+    }
+
+    .carousel .carousel__item {
+        width: 260px;
+    }
+
+    .carousel .carousel__item img {
+        max-width: 260px;
+    }
+
+    .carousel .carousel__actions {
+        top: 37%;
+    }
+
+}
+
+
+/* LARGE LAPTOP - FAMILY */ 
+
+@media screen and (max-width: 1290px) and (min-width: 999px) {
+
+    .family-page-container {
+        height: 2200px;
+    }
+
+    .family-row3-section {
+        max-width: 780px;
+        margin: 0 auto; 
+    }
+
+    .tree-ant, .tree-mark, .tree-jamie, .tree-emily, .tree-dan, .tree-ro, .tree-hal {
+        padding: 15px;
+        max-width: 193px;
+        margin-right: 0px;
+        margin-bottom: 15px;
+    }
+
+    .tree-dan {
+        margin-left: 7px;
+    }
+
+    .tree-hal {
+        margin-left: 7px;
+    }
+
+    .row3-photo {
+        width: 160px;
+    }
+
+
+    .steve-kids {
+        display: initial; 
+    }
+    
+    .julie-kids {
+        display: initial;  
+    }
+    
+    .glyn-kids {
+        display: initial;
+    }
+
+    .family-row4-section {
+        margin-left: 120px;
+    }
+}
+
+@media screen and (max-width: 999px) and (min-width: 700px) {
+
+    .family-page-container {
+        height: 2100px;
+    }
+
+    .family-row2-container {
+        margin-right: 0px;
+    }
+
+    .tree-steve, .tree-julie, .tree-glyn {
+        max-width: 210px;
+    }
+
+    .row2-photo {
+        width: 170px;
+    }
+
+    .family-row3-section {
+        max-width: 780px;
+        margin: 0 auto; 
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .tree-ant, .tree-mark, .tree-jamie, .tree-emily, .tree-dan, .tree-ro, .tree-hal {
+        padding: 15px;
+        max-width: 180px;
+        margin-right: 0px;
+        margin-bottom: 15px;
+    }
+
+    .tree-dan {
+        margin-left: 7px;
+    }
+
+    .tree-hal {
+        margin-left: 7px;
+    }
+
+    .row3-photo {
+        width: 150px;
+    }
+
+
+    .steve-kids {
+        display: initial; 
+    }
+    
+    .julie-kids {
+        display: initial;  
+    }
+    
+    .glyn-kids {
+        display: initial;
+    }
+
+    .family-row4-section {
+        margin-left: 70px;
+    }
+
+}
+
+@media screen and (max-width: 699px) and (min-width: 550px) {
+
+    .family-page-container {
+        height: 1900px;
+    }
+
+    .family-row1-container {
+        width: 270px;
+    }
+
+    .bern-caption {
+        font-size: 14px;
+    }
+
+    .bern-mu-photo {
+        width: 270px;
+    }
+
+    .family-row2-container {
+        margin-right: 0px;
+    }
+
+    .tree-steve, .tree-julie, .tree-glyn {
+        max-width: 164px;
+    }
+
+    .row2-photo {
+        width: 125px;
+    }
+
+    .row2-caption {
+        font-size: 12px;
+        width: 110px;
+    }
+
+    .family-row3-section {
+        max-width: 780px;
+        margin: 0 auto; 
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .tree-ant, .tree-mark, .tree-jamie, .tree-emily, .tree-dan, .tree-ro, .tree-hal {
+        padding: 15px;
+        max-width: 150px;
+        margin-right: 0px;
+        margin-bottom: 15px;
+    }
+
+    .tree-dan {
+        margin-left: 7px;
+    }
+
+    .tree-hal {
+        margin-left: 7px;
+    }
+
+    .row3-photo {
+        width: 120px;
+    }
+
+    .row3-caption {
+        font-size: 12px;
+        width: 120px;
+    }
+
+    .mark-caption, .jamie-caption {
+        width: 105px;
+    }
+
+    .steve-kids {
+        display: initial; 
+    }
+    
+    .julie-kids {
+        display: initial;  
+    }
+    
+    .glyn-kids {
+        display: initial;
+    }
+
+    .family-row4-section {
+        margin-left: 20px;
+    }
+
+    .ant-kids-container {
+        margin-right: 70px;
+    }
+
+    .row4-caption-parent, .row4-caption {
+        font-size: 12px;
+    }
+}
+
+@media screen and (max-width: 549px) and (min-width: 451px) {
+
+    .family-page-container {
+        height: 1900px;
+    }
+
+    .family-row1-container {
+        width: 270px;
+    }
+
+    .bern-caption {
+        font-size: 14px;
+    }
+
+    .bern-mu-photo {
+        width: 270px;
+    }
+
+    .family-row2-container {
+        margin-right: 0px;
+    }
+
+    .tree-steve, .tree-julie, .tree-glyn {
+        max-width: 134px;
+    }
+
+    .row2-photo {
+        width: 100px;
+    }
+
+    .row2-caption {
+        font-size: 12px;
+        width: 110px;
+    }
+
+    .family-row3-section {
+        max-width: 780px;
+        margin: 0 auto; 
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .tree-ant, .tree-mark, .tree-jamie, .tree-emily, .tree-dan, .tree-ro, .tree-hal {
+        padding: 10px;
+        max-width: 115px;
+        margin-right: 0px;
+        margin-bottom: 10px;
+    }
+
+    .tree-dan {
+        margin-left: 7px;
+    }
+
+    .tree-hal {
+        margin-left: 7px;
+    }
+
+    .row3-photo {
+        width: 90px;
+    }
+
+    .row3-caption {
+        font-size: 10px;
+        width: 98px;
+    }
+
+    .mark-caption, .jamie-caption {
+        width: 85px;
+    }
+
+    .steve-kids {
+        display: initial; 
+    }
+    
+    .julie-kids {
+        display: initial;  
+    }
+    
+    .glyn-kids {
+        display: initial;
+    }
+
+    .family-row4-section {
+        margin-left: 20px;
+    }
+
+    .ant-kids-container {
+        margin-right: 40px;
+    }
+
+    .row4-caption-parent, .row4-caption {
+        font-size: 11px;
+    }
 }
