--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -14,6 +14,12 @@ site_title: Bernard Francis Dillon
     <body>
         <div class="top-banner">
             <h2 class="banner"><a href="http://localhost:8080/">{{ site_title }}</a></h2>
+            <div class="dropdown-header">
+                <a href="#" class="dropdown-icon">
+                    <img src="../img/dropdown menu.png" alt="Dropdown Icon" class="dropdown-image">
+                </a>
+            </div>
+
         </div>
 
         <div class="nav">
