--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -18,8 +18,21 @@ site_title: Bernard Francis Dillon
                 <a href="#" class="dropdown-icon">
                     <img src="../img/dropdown menu.png" alt="Dropdown Icon" class="dropdown-image">
                 </a>
+                <ul class="dropdown-buttons">
+                    <li class="dr-about-button">
+                        <a href="http://localhost:8080/about/" class="dr-about-button-text">About</a>
+                    </li>
+                    <li class="dr-awards-button">
+                        <a href="http://localhost:8080/awards/" class="dr-awards-button-text">Awards & Exhibitions</a>
+                    </li> 
+                    <li class="dr-gallery-button">
+                        <a href="http://localhost:8080/gallery/" class="dr-gallery-button-text">The Gallery</a>
+                    </li>    
+                    <li class="dr-family-button"> 
+                        <a href="http://localhost:8080/family/" class="dr-family-button-text">Family Facts</a>
+                    </li> 
+                </ul>                   
             </div>
-
         </div>
 
         <div class="nav">
