--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1692,6 +1692,7 @@ a {
 
     .dropdown-buttons {
         list-style: none;
+        display: none;
         position: absolute;
         margin-top: 3px;
         margin-left: -140px;
@@ -1700,6 +1701,10 @@ a {
         padding-left: 10px;
         padding-top: 130px;
         background-color: #8499B1;
+    }
+
+    .dropdown-header:hover ul {
+        display: block;
     }
 
     .dropdown-buttons li {
@@ -1723,6 +1728,7 @@ a {
 
     .dropdown-header {
         width: 45px;
+        position: relative;
     }
     
     .dropdown-icon {
@@ -1739,14 +1745,16 @@ a {
     }
 
     .nav-buttons {
-        display: initial;
+        /* display: initial;
         height: 300px;
         position: relative;
-        z-index: 3;
+        z-index: 3; */
+        display: none;
     }
 
     .dropdown-buttons {
         list-style: none;
+        display: none;
         position: absolute;
         margin-top: 20px;
         margin-left: -140px;
@@ -1755,6 +1763,10 @@ a {
         padding-left: 10px;
         padding-top: 130px;
         background-color: #8499B1;
+    }
+
+    .dropdown-header:hover ul {
+        display: block;
     }
 
     .dropdown-buttons li {
@@ -1802,6 +1814,7 @@ a {
 
     .dropdown-buttons {
         list-style: none;
+        display: none;
         position: absolute;
         margin-top: 14px;
         margin-left: -120px;
@@ -1810,6 +1823,10 @@ a {
         padding-left: 10px;
         padding-top: 150px;
         background-color: #8499B1;
+    }
+
+    .dropdown-buttons:active ul {
+        display: block;
     }
 
     .dropdown-buttons li {
