--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -13,23 +13,23 @@ site_title: Bernard Francis Dillon
     </head>   
     <body>
         <div class="top-banner">
-            <h2 class="banner"><a href="https://bernarddillon-britishartist.com/">{{ site_title }}</a></h2>
+            <h2 class="banner"><a href="/">{{ site_title }}</a></h2>
             <div class="dropdown-header">
                 <a href="#" class="dropdown-icon">
                     <img src="../img/dropdown menu.png" alt="Dropdown Icon" class="dropdown-image">
                 </a>
                 <ul class="dropdown-buttons">
                     <li class="dr-about-button">
-                        <a href="https://bernarddillon-britishartist.com/about/" class="dr-about-button-text">About</a>
+                        <a href="/about/" class="dr-about-button-text">About</a>
                     </li>
                     <li class="dr-awards-button">
-                        <a href="https://bernarddillon-britishartist.com/awards/" class="dr-awards-button-text">Awards & Exhibitions</a>
+                        <a href="/awards/" class="dr-awards-button-text">Awards & Exhibitions</a>
                     </li> 
                     <li class="dr-gallery-button">
-                        <a href="https://bernarddillon-britishartist.com/gallery/" class="dr-gallery-button-text">The Gallery</a>
+                        <a href="/gallery/" class="dr-gallery-button-text">The Gallery</a>
                     </li>    
                     <li class="dr-family-button"> 
-                        <a href="https://bernarddillon-britishartist.com/family/" class="dr-family-button-text">Family Facts</a>
+                        <a href="/family/" class="dr-family-button-text">Family Facts</a>
                     </li> 
                 </ul>                   
             </div>
@@ -38,16 +38,16 @@ site_title: Bernard Francis Dillon
         <div class="nav">
             <ul class="nav-buttons">
                 <li class="about-button">
-                    <a href="https://bernarddillon-britishartist.com/about/" class="about-button-text">About</a>
+                    <a href="/about/" class="about-button-text">About</a>
                 </li>    
                 <li class="awards-button">
-                    <a href="https://bernarddillon-britishartist.com/awards/" class="awards-button-text">Awards & Exhibitions</a>
+                    <a href="/awards/" class="awards-button-text">Awards & Exhibitions</a>
                 </li>    
                 <li class="gallery-button">
-                    <a href="https://bernarddillon-britishartist.com/gallery/" class="gallery-button-text">The Gallery</a>
+                    <a href="/gallery/" class="gallery-button-text">The Gallery</a>
                 </li>    
                 <li class="family-button"> 
-                    <a href="https://bernarddillon-britishartist.com/family/" class="family-button-text">Family Facts</a>
+                    <a href="/family/" class="family-button-text">Family Facts</a>
                 </li>    
             </ul>
         </div>    
@@ -57,7 +57,7 @@ site_title: Bernard Francis Dillon
         
         <footer>
             <div class="footer-section">
-                <p class="footer">All works © Bernard Francis Dillon 2022 | Please do not reproduce without the expressed written consent of Bernard Francis Dillon.</p>
+                <p class="footer">All works © Bernard Francis Dillon {% year %} | Please do not reproduce without the expressed written consent of Bernard Francis Dillon.</p>
             </div>    
         </footer> 
 
