change gallery title

--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -26,7 +26,7 @@ site_title: Bernard Francis Dillon
                         <a href="/awards/" class="dr-awards-button-text">Awards & Exhibitions</a>
                     </li> 
                     <li class="dr-gallery-button">
-                        <a href="/gallery/" class="dr-gallery-button-text">The Gallery</a>
+                        <a href="/gallery/" class="dr-gallery-button-text"> Gallery</a>
                     </li>    
                     <li class="dr-family-button"> 
                         <a href="/family/" class="dr-family-button-text">Family Facts</a>
