add hover feature to mobile dropdown menu

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1792,6 +1792,10 @@ a {
     .dropdown-header {
         width: 40px;
     }
+
+    .dropdown-header:hover ul {
+        display: block;
+    }
     
     .dropdown-icon {
     
