--- a/css/styles.css
+++ b/css/styles.css
@@ -1216,7 +1216,7 @@ a {
     }
 
     .carousel {
-        height: 788px;
+        height: 833px;
     }
 
     .carousel .carousel__item {
@@ -1791,6 +1791,10 @@ a {
 
     .dropdown-header {
         width: 40px;
+    }
+
+    .dropdown-header:hover ul {
+        display: block;
     }
     
     .dropdown-icon {
