--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -57,7 +57,7 @@ site_title: Bernard Francis Dillon
         
         <footer>
             <div class="footer-section">
-                <p class="footer">All works © Bernard Francis Dillon {{ year }} | Please do not reproduce without the expressed written consent of Bernard Francis Dillon.</p>
+                <p class="footer">All works © Bernard Francis Dillon 2022 | Please do not reproduce without the expressed written consent of Bernard Francis Dillon.</p>
             </div>    
         </footer> 
 
