add X to menu dropdown

--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -18,6 +18,7 @@ site_title: Bernard Francis Dillon
                 <a href="#" class="dropdown-icon">
                     <img src="../img/dropdown menu.png" alt="Dropdown Icon" class="dropdown-image">
                 </a>
+                <img src="../img/xmenu.png" alt="Menu close" class="x-menu-image">
                 <ul class="dropdown-buttons">
                     <li class="dr-about-button">
                         <a href="/about/" class="dr-about-button-text">About</a>
