attempt add lightbox - add js #2

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -421,7 +421,7 @@ a {
 }
 
 .carousel .carousel__item img:hover {
-    filter: grayscale(100);
+    filter: grayscale(52%);
     transform: scale(1.05);
 }
 
