--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -9,18 +9,21 @@ site_title: Bernard Francis Dillon
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{{ site_title }}</title>
         <link rel="stylesheet" href="/css/styles.css"/>
-        <link rel="stylesheet" href="/css/lightbox.css"/>
-        <script src="js/lightbox-plus-jquery.js"></script>
+        <link rel="stylesheet" href="/css/lightbox.min.css"/>
+        <script src="/js/lightbox-plus-jquery.min.js"></script>
+        <script src="/js/dropdown.js"></script>
         <link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@400;600&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;1,200;1,300;1,400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     </head>   
     <body>
         <div class="top-banner">
             <h2 class="banner"><a href="/">{{ site_title }}</a></h2>
             <div class="dropdown-header">
-                <a href="#" class="dropdown-icon">
+                <a href="#" class="dropdown-icon" onclick="addDropdown()">
                     <img src="../img/dropdown menu.png" alt="Dropdown Icon" class="dropdown-image">
                 </a>
-                <img src="../img/xmenu.png" alt="Menu close" class="x-menu-image">
+                <a href="#" class="x-icon" onclick="removeDropdown()">
+                    <img src="../img/xmenu.png" alt="Menu close" class="x-menu-image">
+                </a>    
                 <ul class="dropdown-buttons">
                     <li class="dr-about-button">
                         <a href="/about/" class="dr-about-button-text">About</a>
