make dropdown header addable and removable

--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -18,10 +18,10 @@ site_title: Bernard Francis Dillon
         <div class="top-banner">
             <h2 class="banner"><a href="/">{{ site_title }}</a></h2>
             <div class="dropdown-header">
-                <a href="#" class="dropdown-icon" onclick="addDropdown()">
-                    <img src="../img/dropdown menu.png" alt="Dropdown Icon" class="dropdown-image">
+                <a href="#" class="dropdown-icon">
+                    <img src="../img/dropdown menu.svg" alt="Dropdown Icon" class="dropdown-image">
                 </a>
-                <a href="#" class="x-icon" onclick="removeDropdown()">
+                <a href="#" class="x-icon">
                     <img src="../img/xmenu.png" alt="Menu close" class="x-menu-image">
                 </a>    
                 <ul class="dropdown-buttons">
