--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -9,6 +9,12 @@ site_title: Bernard Francis Dillon
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{{ site_title }}</title>
         <link rel="stylesheet" href="/css/styles.css"/>
+        <link rel="stylesheet" href="/css/navbar.css"/>
+        <link rel="stylesheet" href="/css/home.css"/>
+        <link rel="stylesheet" href="/css/about.css"/>
+        <link rel="stylesheet" href="/css/awards.css"/>
+        <link rel="stylesheet" href="/css/family.css"/>
+        <link rel="stylesheet" href="/css/gallery.css"/>
         <link rel="stylesheet" href="/css/lightbox.min.css"/>
         <script src="/js/lightbox-plus-jquery.min.js"></script>
         <script src="/js/dropdown.js"></script>
